# discord-bot

./: .env  MIGRATIONS.md  README.md  create_secret_env_files.py  schema.sql  swissrpg-app-test.Dockerfile  swissrpg-app.Dockerfile
.sqlx/: query-15ebebae57b62345cf86cdf8755c15122a27d22de62cd438100fec87a56592d6.json  query-1fb69dbaf240d5471deb206e8e9e1dbc33d02211722aad726855a3c6843f36e3.json  query-2512950e12ce70a233e9507f4ebf8ea04bb5ac6fbde1ff641bd754b1fbbdf90c.json  query-2e2ba91835610b57289cef907a3f0784d715af98d0ef0f743d99ea31c9cd3136.json  query-2f89d445bb5169c7d9b1ff633c527650f0cfe2c8b288fd5bbe9f86b4d42f8c58.json  query-4464fded1e4e5193f7cde527f323007feb78bf6e414409075fff1dfd54e38537.json  query-47fd5d2d8a8c98ae143fca97f7dbaab793658dc36eab1e3fce0dea3182c35b1f.json  query-49e9665b3c3a7ef9c7d73b326373d491c78d81d3ece8f15d0be93aa439511c0a.json  query-52b8562ea859d70d61ee4839a5ae23f6ac091c08696cf12b24aa0a46739b22f6.json  query-5ff46914fbb6f9a6a01069c1e97e0a65ebae29a04e2caf31276805e744810c0a.json  query-88e239abbd496f17f4b7a5bcbbb55335aa61eaf4548e81080ed361bf6dc03d4d.json  query-986995be8a88090669aee2ec135cd89effe96df07e3c42ca4d8f78da8e73d574.json  query-9f15694c90c48952831768250b20ec9abf97139dbe51580e05421258aee44f24.json  query-b3240451cb8a674e1fe8b5912195824ad9870a9500d491917b86313357fa278f.json  query-cbb4ba47d4c3200f03b8380e343826097a93c426484f0752047e720de68e81ce.json  query-e15e0e3c0462fd3f61f093efc8661230fbbf83ea6cc4793501635f1540211f5e.json
app/: Cargo.toml
app/src/: main.rs
lib/: Cargo.toml
migrations/: 20250810_swissrpg_events.down.sql  (+5 more)
ui/: Cargo.toml
(+51 files in other folders)
